Some more style changes

--- a/src/posts/my-second-post/index.mdx
+++ b/src/posts/my-second-post/index.mdx
@@ -2,7 +2,7 @@
 title: My Second Post! I'm Liking This...
 slug: my-second-post
 date: 2020-03-22
-featureImage: code.jpg
+featureImage: tianjin.jpg
 excerpt: Integer morbi purus in morbi nisl lobortis congue malesuada. Id turpis posuere nam habitasse at mus viverra.
 ---
 
@@ -36,7 +36,7 @@ Lorem ipsum dolor sit amet, ~~consectetur adipiscing elit~~. Ut tortor tincidunt
 - Showcase and embed your work with
 - Showcase and embed your work with
 
-![Code Photo](code.jpg)
+![Tianjin Photo](tianjin.jpg)
 
 ```html
 <div>Hello World</div>
