MDX file styling

--- a/src/posts/my-third-post/index.mdx
+++ b/src/posts/my-third-post/index.mdx
@@ -1,42 +1,17 @@
 ---
-title: Do I Want To Keep Doing This?
+title: Canada
 slug: my-third-post
 date: 2020-03-23
 featureImage: canada.jpg
-excerpt: Enim nunc amet, eu, vitae nunc. Et in elementum aliquet nunc mauris, nulla. Convallis viverra neque quam mi sit.
+excerpt: Whether you're a hardcore adrenaline junkie, a wildlife enthusiast or a city slicker looking for cutting-edge culture, Canada ticks all the boxes.
 ---
 
-# Heading 1
+# Travel north of the wall!
 
-## Heading 2
+Whether you're a hardcore adrenaline junkie, a wildlife enthusiast or a city slicker looking for cutting-edge culture, Canada ticks all the boxes.
+The world's second largest country(by total area) racks up an astonishing diversity of landscapes; the vast Canadian Praries rise abruptly to the glacier-topped Rocky Mountains; rugged,
+unspoiled coastlines give away to immense forests and emerald lakses; and Arctic waters laå upon frozen tundra. Incredibly, this wilderness is also home to cosmopolitan cities, quirky towns and remote ingenous settlements.
 
-### Heading 3
-
-#### Heading 4
-
-##### Heading 5
-
-###### Heading 6
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. `Consectetur pulvinar consequat hendrerit nulla et tempor neque`, risus. Mauris nulla at imperdiet duis sit euismod quis augue. Quam convallis porta pharetra consequat diam laoreet enim.
-
----
-
-Lorem ipsum dolor sit amet, ~~consectetur adipiscing elit~~. Ut tortor tincidunt porttitor suspendisse dolor aliquam, sodales. Consequat, amet, et urna, habitant nibh tincidunt viverra sed sed. **Amet tortor euismod ut in nulla viverra in**. Proin gravida.
-
-> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sit nisl, leo et. Vitae hendrerit vivamus cum ullamcorper hendrerit et arcu, elit ornare.
-
-[Lorem ipsum dolor sit amet](https://www.google.com/), consectetur adipiscing elit. Integer morbi purus in morbi nisl lobortis congue malesuada. Id turpis posuere nam habitasse at mus viverra. Est at pretium facilisis cursus leo. Et massa tincidunt velit donec. Erat elementum nibh.
-
-1. Showcase and embed your work with
-2. Showcase and embed your work with
-3. Showcase and embed your work with
-
-- Showcase and embed your work with
-- Showcase and embed your work with
-- Showcase and embed your work with
-
-![Canada Photo](canada.jpg)
 
 ```html
 <div>Hello World</div>
