--- a/src/posts/my-first-post/index.mdx
+++ b/src/posts/my-first-post/index.mdx
@@ -1,42 +1,25 @@
 ---
-title: My First Post! Hello World!
+title: New York
 slug: my-first-post
 date: 2020-03-21
-featureImage: sunset.jpg
-excerpt: Habitant pharetra, urna ipsum interdum risus nunc. Venenatis orci, sagittis, elementum urna.
+featureImage: newYork.jpg
+excerpt: Cool, cosmopolitan, crowded, constantly evolving … the Big Apple blends big city splendor with small-town charm.
 ---
 
-# Heading 1
+# Travel to New York
 
-## Heading 2
+Cool, cosmopolitan, crowded, constantly evolving … the Big Apple blends big city splendor with small-town charm. 
+Amid Gotham's iconic landmarks and towering skyscrapers, you'll experience a vibrant culture permeating each of the city's distinctive neighborhoods and boroughs. 
+Follow trendsetters to the East Village and Brooklyn to check out indie boutiques, iconic bakeries and trendy coffee shops.
+ Afterward, peruse the racks of the sleek shops lining Fifth Avenue, admire the cutting-edge art collections at the MoMA and the Met, 
+ catch a memorable show on Broadway or sit down for a meal at the latest "it" restaurant.
 
-### Heading 3
+As the most populous city in the U.S. – set at the forefront of food, fashion and the arts – NYC requires stamina. 
+But don't let the Big Apple's frenetic sights and sounds intimidate you from soaking up its grandeur. Enlist the help of a local to help you navigate it all. 
+Wander through the concrete jungle and you'll discover roaring taxis zipping down bustling blocks, fast-paced pedestrians strolling past on their way to marquee galleries and trendy cocktail bars, 
+and Times Square's neon lights flickering at all hours. And yet, the city's twinkling lights and chaotic corners also invite you to embrace every New York minute, explore every enclave and create your own urban adventure. There are endless ways to spend your time in the city that never sleeps, but before you leave, stop and look around – what's here today will be transformed into something bigger and better tomorrow.
 
-#### Heading 4
 
-##### Heading 5
-
-###### Heading 6
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. `Consectetur pulvinar consequat hendrerit nulla et tempor neque`, risus. Mauris nulla at imperdiet duis sit euismod quis augue. Quam convallis porta pharetra consequat diam laoreet enim.
-
----
-
-Lorem ipsum dolor sit amet, ~~consectetur adipiscing elit~~. Ut tortor tincidunt porttitor suspendisse dolor aliquam, sodales. Consequat, amet, et urna, habitant nibh tincidunt viverra sed sed. **Amet tortor euismod ut in nulla viverra in**. Proin gravida.
-
-> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sit nisl, leo et. Vitae hendrerit vivamus cum ullamcorper hendrerit et arcu, elit ornare.
-
-[Lorem ipsum dolor sit amet](https://www.google.com/), consectetur adipiscing elit. Integer morbi purus in morbi nisl lobortis congue malesuada. Id turpis posuere nam habitasse at mus viverra. Est at pretium facilisis cursus leo. Et massa tincidunt velit donec. Erat elementum nibh.
-
-1. Showcase and embed your work with
-2. Showcase and embed your work with
-3. Showcase and embed your work with
-
-- Showcase and embed your work with
-- Showcase and embed your work with
-- Showcase and embed your work with
-
-![Sunset Photo](sunset.jpg)
 
 ```html
 <div>Hello World</div>
