--- a/src/posts/my-fourth-post/index.mdx
+++ b/src/posts/my-fourth-post/index.mdx
@@ -1,42 +1,24 @@
 ---
-title: My Fourth Post... So Long For Now
+title: Prague
 slug: my-fourth-post
 date: 2020-03-24
-featureImage: buildings.jpg
-excerpt: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sit nisl, leo et. Vitae hendrerit vivamus cum ullamcorper hendrerit et arcu, elit ornare.
+featureImage: prague.jpg
+excerpt: Prague offers so much more than alluring architecture, abundant brews and an inherently romantic atmosphere.
 ---
 
-# Heading 1
+# Travel to Prague
 
-## Heading 2
+Prague offers so much more than alluring architecture, abundant brews and an inherently romantic atmosphere. 
+The city has kept up with European trends in the realms of art, fashion, gastronomy and more, 
+lending it a contemporary sheen that merges comfortably with its historical and architectural prowess. 
+Indeed, as you browse the wealth of impressive Gothic, Baroque and Renaissance buildings (Powder Tower; St. Vitus Cathedral; Kinsky Palace), 
+it’s difficult not to be equally bewitched by the trendy boutiques, swish hotels, and chic cocktail bars and microbreweries that pepper most downtown streets these days.
 
-### Heading 3
+The city’s various epochs – Slavic, Habsburgian, Communist – are also still visible and make for fascinating explorations, as do their associated personalities, 
+from Rudolf II to Franz Kafka. When the centre gets too much, hit the neighbourhoods – Vinohrady, Žižkov, Karlín, Holešovice – which throw up all kinds of interesting surprises, 
+from independent galleries and cosy jazz bars to the witty public art of David Černý, and plenty of hidden gardens and churches.
 
-#### Heading 4
 
-##### Heading 5
-
-###### Heading 6
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. `Consectetur pulvinar consequat hendrerit nulla et tempor neque`, risus. Mauris nulla at imperdiet duis sit euismod quis augue. Quam convallis porta pharetra consequat diam laoreet enim.
-
----
-
-Lorem ipsum dolor sit amet, ~~consectetur adipiscing elit~~. Ut tortor tincidunt porttitor suspendisse dolor aliquam, sodales. Consequat, amet, et urna, habitant nibh tincidunt viverra sed sed. **Amet tortor euismod ut in nulla viverra in**. Proin gravida.
-
-> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sit nisl, leo et. Vitae hendrerit vivamus cum ullamcorper hendrerit et arcu, elit ornare.
-
-[Lorem ipsum dolor sit amet](https://www.google.com/), consectetur adipiscing elit. Integer morbi purus in morbi nisl lobortis congue malesuada. Id turpis posuere nam habitasse at mus viverra. Est at pretium facilisis cursus leo. Et massa tincidunt velit donec. Erat elementum nibh.
-
-1. Showcase and embed your work with
-2. Showcase and embed your work with
-3. Showcase and embed your work with
-
-- Showcase and embed your work with
-- Showcase and embed your work with
-- Showcase and embed your work with
-
-![Buildings Photo](buildings.jpg)
 
 ```html
 <div>Hello World</div>
