--- a/src/posts/my-second-post/index.mdx
+++ b/src/posts/my-second-post/index.mdx
@@ -1,42 +1,21 @@
 ---
-title: My Second Post! I'm Liking This...
+title: Tianjin
 slug: my-second-post
 date: 2020-03-22
 featureImage: tianjin.jpg
-excerpt: Integer morbi purus in morbi nisl lobortis congue malesuada. Id turpis posuere nam habitasse at mus viverra.
+excerpt: Forever being compared to Běijīng (if anything, it's more like Shànghǎi).
 ---
 
-# Heading 1
+## Travel to Tianjin!
 
-## Heading 2
+Forever being compared to Běijīng (if anything, it's more like Shànghǎi), 
+the former foreign concession port of Tiānjīn (天津) is a large, booming, yet laid-back city, 
+with a pleasant river promenade and some charming, European-flavoured neighbourhoods. 
+It's an easy day trip from the capital, but you may want a long weekend to explore the city properly.
 
-### Heading 3
 
-#### Heading 4
 
-##### Heading 5
-
-###### Heading 6
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. `Consectetur pulvinar consequat hendrerit nulla et tempor neque`, risus. Mauris nulla at imperdiet duis sit euismod quis augue. Quam convallis porta pharetra consequat diam laoreet enim.
-
----
-
-Lorem ipsum dolor sit amet, ~~consectetur adipiscing elit~~. Ut tortor tincidunt porttitor suspendisse dolor aliquam, sodales. Consequat, amet, et urna, habitant nibh tincidunt viverra sed sed. **Amet tortor euismod ut in nulla viverra in**. Proin gravida.
-
-> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sit nisl, leo et. Vitae hendrerit vivamus cum ullamcorper hendrerit et arcu, elit ornare.
-
-[Lorem ipsum dolor sit amet](https://www.google.com/), consectetur adipiscing elit. Integer morbi purus in morbi nisl lobortis congue malesuada. Id turpis posuere nam habitasse at mus viverra. Est at pretium facilisis cursus leo. Et massa tincidunt velit donec. Erat elementum nibh.
-
-1. Showcase and embed your work with
-2. Showcase and embed your work with
-3. Showcase and embed your work with
-
-- Showcase and embed your work with
-- Showcase and embed your work with
-- Showcase and embed your work with
-
-![Tianjin Photo](tianjin.jpg)
+<!-- ![Tianjin Photo](tianjin.jpg) -->
 
 ```html
 <div>Hello World</div>
